# switch_controller

./: Cargo.toml  README.md  example_layout.txt  layout.txt  switch_layout.txt
src/: index.html  main.rs
